Added start page GUI

--- a/web/html/main.html
+++ b/web/html/main.html
@@ -1,3 +1,5 @@
+<!-- Main gameplay page -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +9,8 @@
 	<link rel="icon" type="image/png" href="/source/heart.png">
 	<title>test</title>
 
-	<script src="eel.js"></script>
+	<!-- <script src="eel.js"></script> -->
+	
 </head>
 <body>
 	<p>test</p>
